Fixed spacings

--- a/src/main.css
+++ b/src/main.css
@@ -207,5 +207,8 @@ h5 {
         margin: 20px;
     }
 
-   
+   .work-heading h1 {
+    margin-right: 0;
+    text-align: center;
+   }
 }
